# radius

./: .gitignore  Anchor.toml  Cargo.toml  README.md  id.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.scripts.json  tsconfig.tsbuildinfo
.cargo/: config.toml
app/: globals.css  layout.tsx  page.tsx
app/components/: CreateMarketModal.tsx  SideBlock.tsx  SolanaProvider.tsx  SpreadBlock.tsx  TVLSparkline.tsx  TradeModal.tsx  VolumeBlock.tsx
app/types/: manifest.ts
app/web/: package-lock.json  package.json
app/web/lib/: zkProver.js
app/web/pages/: index.js
app/web/styles/: globals.css
circuits/: package-lock.json  package.json  spatial_check.circom
circuits/scripts/: compile.sh  export_vk_to_rust.js  setup.sh
docs/: zk-location-architecture.md
lib/: hyperlocalClient.ts  zkLocationClient.ts  zkProver.js
manifests/: example_weather.json
programs/hyperlocal_markets/: Cargo.toml
programs/hyperlocal_markets/src/: lib.rs
programs/hyperlocal_markets/tests/: hyperlocal_markets.ts
programs/zk_location_verifier/: Cargo.toml
programs/zk_location_verifier/src/: lib.rs  verifying_key.rs
public/zk/: verification_key.json
scripts/: convert_vk.js  create_test_market.ts  devnet_smoke.ts  run_agent.ts  test_resolver.ts
