[workspace]
resolver = "2"
members = [
    "programs/zk_location_verifier",
    "programs/hyperlocal_markets",
]

[workspace.dependencies]
groth16-solana = "0.2.0"

[profile.release]
overflow-checks = true

[patch.crates-io]
anchor-lang = { git = "https://github.com/solana-foundation/anchor", rev = "54d5396" }
