[workspace]
resolver = "2"
members = [
    "programs/zk_location_verifier",
    "programs/hyperlocal_markets",
]

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
groth16-solana = "0.2.0"
anchor-spl = "0.31.1"
proc-macro2 = "1.0.94"

[patch.crates-io]
anchor-syn = { path = "vendor/anchor-syn" }

[profile.release]
overflow-checks = true
