[package]
name = "hyperlocal_markets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hyperlocal_markets"

[dependencies]
anchor-lang = { workspace = true }

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]
no-idl = ["anchor-lang/no-idl"]
default = []
