[package]
name = "hyperlocal_markets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hyperlocal_markets"

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["idl-build"] }

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]
default = []
