[package]
name = "zk_location_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_location_verifier"

[dependencies]
anchor-lang = { workspace = true }
groth16-solana = { workspace = true }

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]
no-idl = ["anchor-lang/no-idl"]
default = []
